# katas

./: .gitignore  README.md  pyproject.toml  update_projects.sh
bank-event-sourced/: Makefile  pyproject.toml
bank-event-sourced/src/: account.py
bank-event-sourced/tests/acceptance/: test_bank_can_print_off_account_statement.py
bank-pytest/: .coveragerc  .editorconfig  .flake8  README.md  pyproject.toml
bank-pytest/src/: account_service.py  constants.py  date_provider.py  exceptions.py  statement_printer.py  transaction.py  transaction_repository.py
bank-pytest/tests/: conftest.py
bank-pytest/tests/acceptance/: test_print_bank_statement_should.py
bank-pytest/tests/unit/: conftest.py  test_account_service_should.py  test_console_statement_printer_should.py
booking-cqrs/: .editorconfig  README.md  pyproject.toml
booking-cqrs/docs/: User Stories.md
corporate-hotel-booking/: README.md  jest.config.js  package.json  pyproject.toml
corporate-hotel-booking/src/booking/: booking_policy_repository.py  booking_policy_service.py
corporate-hotel-booking/src/company/: company_service.py  employee.py  employee_repository.py  errors.py
corporate-hotel-booking/src/hotel/: exceptions.py  hotel.py  hotel_repository.py  hotel_service.py
corporate-hotel-booking/tests/: conftest.py
corporate-hotel-booking/tests/acceptance/: test_admin_can_create_booking_policies.py  test_should_find_hotel_by_id.py  test_should_manage_company_employees.py
corporate-hotel-booking/tests/arch/: test_arch.py
corporate_hotel_booking/: Makefile  README.md  app.py  pyproject.toml
corporate_hotel_booking/corporate_hotel_booking/: booking_engine.py
corporate_hotel_booking/corporate_hotel_booking/booking/: booking.py  booking_id.py  booking_policy_service.py  booking_request.py  booking_service.py  company_policy_violation_error.py  policy_repository.py
corporate_hotel_booking/corporate_hotel_booking/company/: company.py  employee.py  employee_id.py  employee_repository.py
corporate_hotel_booking/corporate_hotel_booking/hotel/: hotel.py  hotel_id.py  hotel_not_found.py  hotel_repository.py  hotel_service.py  room_type.py
corporate_hotel_booking/corporate_hotel_booking/policy/: company_policy.py  employee_policy.py
corporate_hotel_booking/tests/acceptance/: test_employee_can_book_a_room.py
corporate_hotel_booking/tests/unit/: booking_engine_should.py
driving-licence/: Dockerfile  README.md  app.py  pyproject.toml
driving-licence/driving_licence/: generator.py  request.py
driving-licence/tests/: test_driving_licence_generator.py
employee-report-simplified/: .gitignore  pyproject.toml
enchanting/: Makefile  README.md  app.py  pyproject.toml
enchanting/enchanting/: enchanting.py
enchanting/tests/acceptance/: enchanting_a_weapon_should.py
enchanting/tests/unit/: durance_should.py  magic_book_should.py
enchanting/untitled/: pyproject.toml
fridgecraft/: README.md  pyproject.toml
fridgecraft/src/: fridge.py  item.py
fridgecraft/tests/acceptance/: fridge.py
fridgecraft/tests/unit/: fridge.py
gilded_rose/: gilded_rose.py  items.py  pyproject.toml  results_3_days.txt  test_gilded_rose.py  texttest_fixture.py
guess-who/: README.md  pyproject.toml
guess-who/guess_who/: guess_who.py
guess-who/tests/: conftest.py
guess-who/tests/acceptance/: test_correct_guess_in_number_of_turns.py
guess-who/tests/unit/: test_guess_who.py
kata-airways/: README.md  pyproject.toml
kata-airways/docs/diagrams/: flight-scheduler.txt
kata-airways/src/: flight.py  flight_pairing_generator.py  flight_schduler.py  flight_scheduler.py  pilot.py  pilot_repository.py  pilot_service.py  schedule.py
kata-airways/src/core/: errors.py  route_map.py  value_objects.py
kata-airways/tests/: conftest.py  constants.py  test_print_four_week_roster.py
kata-airways/tests/unit/: conftest.py  test_flight.py  test_flight_scheduler.py  test_flight_service.py  test_inmemory_pilot_repository.py  test_pilot_service.py
legacy-air-traffic-control/: legacy_code_air_traffic.py  mypy.ini  pyproject.toml  run.py
legacy-air-traffic-control/tests/: test_airtraffic_controller_should.py
mars_rover/: pyproject.toml
mars_rover/mars_rover/: mars_rover.py
mars_rover/tests/: mars_rover_should.py
merchants-guide-to-galaxy/: .gitignore  README.md  pyproject.toml
merchants-guide-to-galaxy/merchants_guide_to_galaxy/: answer_queries_use_case.py  app.py  currency_assignment_use_case.py  currency_repo.py  error.py  intergalactic_currency_converter.py  metal.py  metal_converter.py  metal_value_calculation_use_case.py  roman_numerals_converter.py  symbol_repo.py
merchants-guide-to-galaxy/merchants_guide_to_galaxy/domain/: currency.py  error.py  intergalactic_symbols.py  metal.py  roman_numerals_converter.py  symbol_repo.py
merchants-guide-to-galaxy/merchants_guide_to_galaxy/repository/: in_memory_symbol_repo.py
merchants-guide-to-galaxy/merchants_guide_to_galaxy/usecase/: answer_printer.py  answer_queries_use_case.py  (+2 more)
merchants-guide-to-galaxy/tests/: conftest.py
py-poker-hands/: .gitignore  README.md  pyproject.toml
py-poker-hands/py_poker_hands/: poker.py
shopping-cart-kata/: pyproject.toml
shopping-cart-kata/shopping_cart_kata/: shopping_cart.py
shopping_basket/: .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  README.md  app.py  docker.txt  mypy.ini  pyproject.toml  pyrightconfig.json
shopping_basket/features/: add_items_to_shopping_basket.feature
shopping_basket/shopping_basket/: console_logging_decorator.py  date_provider.py  errors.py  product.py  product_category.py  product_repository.py  product_service.py  shopping_basket.py  shopping_basket_repository.py  shopping_basket_service.py  user.py  utilities.py
shopping_basket/tests/: conftest.py  constants.py
social-network/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  api.http  docker-compose.yaml  mypy.ini  pyproject.toml
social-network/tests/: conftest.py
tennis-v2/: README.md  pyproject.toml
tennis-v2/tennis_v2/: tennis_score_calculator.py
tennis-v2/tennis_v3/: tennis_score_calculator.py
(+363 files in other folders)
