[tool.poetry]
name = "corporate-hotel-booking"
version = "0.1.0"
description = "Kata"
authors = ["Javed, Danish <Danish.Javed@F-Secure.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
