[tool.poetry]
name = "corporate-hotel-booking"
version = "0.1.0"
description = ""
authors = ["Danish Javed <1080238+ambersariya@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "corporate_hotel_booking"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-archon = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
