[tool.poetry]
name = "fridgecraft"
version = "0.1.0"
description = "Fridgecraft Kata"
authors = ["Javed, Danish <danish.javed@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
