[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["ambersariya <1080238+ambersariya@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.971"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
parameterized = "^0.8.1"
coverage = "^6.4.2"
pylama = {extras = ["all"], version = "^8.3.8"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
