[tool.poetry]
name = "guess-who"
version = "0.1.0"
description = ""
authors = ["Danish Javed <1080238+ambersariya@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "guess_who"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
