[tool.poetry]
name = "guess-who"
version = "0.1.0"
description = ""
authors = ["Danish Javed <1080238+ambersariya@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "guess_who"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
coverage = "^7.0.5"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
