[tool.poetry]
name = "mars-rover-kata"
version = "0.1.0"
description = ""
authors = ["ambersariya <1080238+ambersariya@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[scripts]
test = 'python -m unittest'