[tool.poetry]
name = "merchants-guide-to-galaxy"
version = "0.1.0"
description = ""
authors = ["ambersariya <1080238+ambersariya@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "merchants_guide_to_galaxy"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
