[tool.poetry]
name = "shopping_basket"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Istvan Agardi <username@example.org>"]
license = ""

[tool.poetry.dependencies]
python = "^3.9.13"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.1.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
