[tool.poetry]
name = "shopping_basket"
version = "0.1.0"
description = "Shopping basket kata"
readme = "README.md"
authors = ["Istvan Agardi <username@example.org>", "Danish Javed <1080238+ambersariya@users.noreply.github.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.9.13"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.1.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
behave = "^1.2.6"
coverage = "^6.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 39
profile = "black"
src_paths = ["shopping_basket", "test"]
line_length = 100

