[tool.poetry]
name = "shopping_basket"
version = "0.1.0"
description = "Shopping basket kata"
readme = "README.md"
authors = ["Istvan Agardi <username@example.org>", "Danish Javed <1080238+ambersariya@users.noreply.github.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.9.13"
fastapi = "^0.95.0"
uvicorn = { extras = ["standard"], version = "^0.18.3" }

[tool.poetry.group.dev.dependencies]
pytest-archon = "^0.0.4"
pytest = "^7.1.2"
black = "^24.3.0"
mypy = "^0.971"
isort = "^5.10.1"
coverage = "^6.4.3"
pytest-mypy = "^0.9.1"
pytest-mock = "^3.8.2"
pytest-sugar = "^0.9.5"
prospector = "^1.7.7"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.py?$'

[tool.isort]
py_version = 39
profile = "black"
src_paths = ["shopping_basket", "test"]
line_length = 100
remove_redundant_aliases = true
