[tool.poetry]
name = "social-network"
version = "0.1.0"
description = ""
authors = ["ambersariya <1080238+ambersariya@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "social_network"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
