[tool.poetry]
name = "social-network"
version = "0.1.0"
description = ""
authors = ["ambersariya <1080238+ambersariya@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
lagom = "^2.2.0"
fastapi = "^0.95.0"
uvicorn = "^0.20.0"
httpx = "^0.23.2"
pymessagebus = "^1.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
